# cplusplus_learning

./: 24_laboratory_problems.txt  CMakeLists.txt  CNFCalculator.cpp  CNFCalculator.h  codeforce.cpp  main.cpp  new.md  testTransitiveClosure.txt
data/: input.txt
